
- Upgraded to Berkeley DB 4.7.

- Duro D/T now supports CASE and constraints.

- Added exception handling to Duro D/T.

- Dropped first argument of CONNECT.

- The return type is now explicitly passed to funtions which implement
  read-only operators.

- Single quotes are now used in data output in Tutorial D form.

- If a type is not found, NAME_ERROR is raised instead of NOT_FOUND_ERROR.

Changes for Duro 0.13

- Renamed build target "check" to "test".

- Upgraded to Berkeley DB 4.6.

- Removed arguments ltfnp, arg, and txp from parsing functions.

- Added RDB_type_is_relation().

- Added built-in operators TUPLE and RELATION.

- Dropped argc argument of RDB_ro_op().

- RDB_insert() and RDB_multi_assign() now support inserting tables.

- RDB_table_to_array() now supports two modes (buffered and unbuffered).

- Implemented interpreter Duro D/T.

- Fixed bug in Duroadmin - now uses correct floating-point type.

- Replaced ATTRIBUTE_NOT_FOUND_ERROR by NAME_ERROR.

- Renamed INVALID_TRANSACTION_ERROR to NO_RUNNING_TX_ERROR
  and RDB_raise_invalid_tx() to RDB_raise_no_running_tx().

- Dropped type DOUBLE. FLOAT is now double precision.

- Lexer: removed leading "-" from number literals.

- Using doxygen for the documentation.

Changes for Duro 0.12

- Replaced GNU Autotools by SCons.

- Using tcltest for testing.

- Changed interface for creating read-only operator expressions.

- Replaced RDB_table by RDB_object.

- Replaced RDB_project(), RDB_union() etc. by RDB_expr_to_vtable()

- Removed RDB_expr_any(), RDB_expr_all(), etc.

- Added RDB_init_table() and RDB_init_table_from_type() for creating
  local tables; removed argument 'global' from RDB_create_table()
  and RDB_create_table_from_type().

- Added RDB_table_is_persistent() and RDB_table_is_real().

- Added RDB_dup_nonscalar_type().

- Renamed RDB_expr_var() to RDB_var_ref().

- Removed RDB_parse_table().

- Changes to expression syntax for better conformance with TTM, third
  edition.

Changes for Duro 0.11
