@@ -19,6 +19,8 @@ Changes for Duro 0.14
 
 - If a type is not found, NAME_ERROR is raised instead of NOT_FOUND_ERROR.
 
+- Added limited type implementation functionality to Duro D/T .
+
 Changes for Duro 0.13
 
 - Renamed build target "check" to "test".
